# Kenya-One-Project

./: .coveragerc  .env-sample  .env.sample  .gitignore  Drag_Analysis.py  GA_Sizing.ipynb  GA_Sizing.py  Gudmundsson Constraint.ipynb  Kenya One.code-workspace  License.md  Main Junkfile.py  Main.ipynb  Procfile  README.md  TESTING_MAIN.py  aerodynamics.py  airfoil.py  constraint.py  defaults.py  junkbook.ipynb  junkfile.py  llt.ipynb  main.py  manage.py  mkdocs.yml  netlify.toml  package-lock.json  prerequisites.py  pyproject.toml  pytest.ini  requirements.txt  sklearn junkbook.ipynb  sklearn junkbook.py  sympy junkbook.ipynb  sympy junkbook.py  trial.ipynb  values.py  valuetest.py  wing.ipynb  wing.py  (+1 more)
.ipynb_checkpoints/: GA_Sizing-checkpoint.ipynb  Main-checkpoint.ipynb  llt-checkpoint.ipynb  performance introduction-checkpoint.ipynb  sklearn junkbook-checkpoint.ipynb  sympy junkbook-checkpoint.ipynb
API/: TESTING_MAINAPI.py  aircrafttypeAPI.py  airfoilAPI.py  db_API.py  lifting_line_theory.py  perfIntroAPI.py  wingAPI.py
CORE/: LICENSE  README.md  global_constants.py
Frontend/: package.json
Frontend-Electron/: .eslintrc.json  .gitignore  package-lock.json  package.json  tsconfig.json
Kenya_One/: settings.py  urls.py  wsgi.py
ML/: Tensorflow1.py  TensorflowMnist.py  create_sentiment_featuresets.py  dogs.py  iris.csv  iris.py  pipeline.py  sk.py
Machine Learning/: aircrafttypeAI.py
Ostrich/: urls.py  wsgi.py
accounts/: admin.py  apps.py  models.py  tests.py  views.py
database/: database.db  db_API.py  sqlite tutorial.py  trial2.py  trial3.py  wing.py  (+1 more)
(+243 files in other folders)
